adds tool to list database sections on homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
-<p>
-  Hello
-</p>
+<p>Sections</p>
+
+
+  <ul>
+    <%Section.all.each do |name|%>
+    <li><%=name[:name]%></li>
+    <%end%>
+  </ul>
