adds description column to section database

--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -17,6 +17,12 @@
     <input type="text" id = "name-input" name="section_name" />
   </div>
   <div>
+    <h4>
+      <label for="description-input">Section Description (optional)</label>
+    </h4>
+    <input type="text" id = "description-input" name="section_description" />
+  </div>
+  <div>
     <input type="submit" />
   </div>
 </form>
