--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -8,6 +8,14 @@
   <% end %>
 </ul>
 
+<!-- <% if @section %>
+  <ul>
+    <% @section.errors.each do |column, error| %>
+      <li><%= column %> <%= error %></li>
+    <% end %>
+  </ul>
+<% end %> -->
+
 <form action="/sections" method="POST">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
   <div>
