--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,5 +1,13 @@
 <h1><%= @section.name %></h1>
 
+<ul>
+
+  <li>
+    <%= @items.inspect %>
+  </li>
+
+</ul>
+
 <% if @item %>
   <ul>
     <% @item.errors.each do |column, error| %>
@@ -8,7 +16,7 @@
   </ul>
 <% end %>
 
-<form action="/sections/:id" method="POST">
+<form action="/sections/<%=@section.id%>" method="POST">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
   <div>
     <h4>
