--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,12 +1,14 @@
 <h1><%= @section.name %></h1>
 
 <ul>
-
-  <li>
-    <%= @items.inspect %>
-  </li>
-
+  <% @items.each do |item| %>
+    <li>
+    <%=item.name%>, <%=item.description%>, <%=item.price%>, <%=item.note%>
+    </li>
+  <% end %>
 </ul>
+
+
 
 <% if @item %>
   <ul>
