--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -3,12 +3,10 @@
 <ul>
   <% @items.each do |item| %>
     <li>
-    <%=item.name%>, <%=item.description%>, <%=item.price%>, <%=item.note%>
+    <%=item.name%>, <%=item.description%> <%=item.price%> <%=item.note%>
     </li>
   <% end %>
 </ul>
-
-
 
 <% if @item %>
   <ul>
