--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,6 +1,8 @@
 <div class = "menubody">
 
-      <h2>Food Menu Categories</h2>
+    <h2>Food Menu Categories</h2>
+    <div class = "center">
+
 
       <ul>
         <% @sections.each do |section| %>
@@ -19,11 +21,11 @@
         </ul>
         <% end %>
       </ul>
+    </div>
 
 </div>
 
 <div class = "form">
-
 
       <% if @section %>
         <ul>
