--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -13,29 +13,43 @@
 .header {
   display: inline-block;
   width: 80%;
-  padding: 0 0 0 150px;
-
-
+  padding: 0 0 0 0;
 
 }
 
 .header .logo {
   display: inline-block;
   float: left;
-  padding: 0 0 0 180px;
+  padding: 0 0 0 320px;
 }
 
-.header a {
+.header .links {
   display: inline-block;
   font-family: 'Arimo', sans-serif;
   float: right;
-  padding: 50px 150px 100px 100px;
+  padding: 50px 0 0 25px;
+}
+
+.header a {
+  font-family: 'Cantarell', sans-serif;
+  padding: 10px;
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+.menubody  {
+  height: auto;
+  width: 800px;
+  border: 2px solid #95b9e3;
+  margin: 0 300px 0 250px;
 }
 
 .menubody h2 {
   text-align: center;
   padding: 0 100px 0 0;
 }
+
 .menubody ul{
   list-style: none;
 }
@@ -44,8 +58,10 @@
   list-style: none;
 }
 
-.menubody  {
-  padding: 0 500px 0 500px;
+
+
+.menubody .center {
+  padding: 0 100px 0 200px;
 }
 
 .footer {
