--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
           <%= link_to 'About', "/about"%>
           <%= link_to 'Contact', "/contact"%>
         </div>
-    </div>
+        <p>Open daily, 4pm - 10pm // Oyster Happy Hour, Monday - Thursday, 4pm - 6pm // 4743 Ballard Ave NW Seattle, WA 98107 // (206) 395-9227</p>
+      </div>
   </div>
 
 <%= yield %>
