--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,20 +1,20 @@
+<%require 'time'%>
+
 <div class = "menubody">
 
-    <h2>Food Menu Categories</h2>
+    <h1>Menu for <%=Time.now.strftime("%A, %b %d")%></h1>
     <div class = "center">
-
-
       <ul>
         <% @sections.each do |section| %>
         <li>
-          <%= link_to section.name, section_path(section.id) %>
+          <h2><%= link_to section.name, section_path(section.id)%></h2>
         </li>
           <%=section.description %>
         <ul>
           <% @items.each do |item| %>
             <% if item.menu_section_id == section.id %>
               <li>
-                <%=item.name%>, <%=item.description%> <%=item.price%> <%=item.note%>
+                <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span>, <span class = "price"><%=item.price%></span> <%=item.note%>
               </li>
             <% end %>
           <% end %>
@@ -22,7 +22,16 @@
         <% end %>
       </ul>
     </div>
-
+    <h4>20% Service Charge**</h4>
+    <p class="notes">
+      *Consuming raw, undercooked, or unpasteurized foods may increase your risk of foodborne illness. <br>
+      Menu items may contain nuts and other allergens.
+      Please let us know if you are allergic to anything.
+    </p>
+    <p class ="notes">
+      ** 100% of this charge is paid to employees. 55% of this charge is paid to employees “directly serving the customer”.
+    </p>
+    <h5>Thank you for dining at the Walrus and the Carpenter.</h5>
 </div>
 
 <div class = "form">
@@ -34,22 +43,9 @@
           <% end %>
         </ul>
       <% end %>
-<<<<<<< HEAD
-    <% end %>
-  </ul>
-  <% end %>
-</ul>
 
-<h4>20% Service Charge**</h4>
-<p class="notes">
-  *Consuming raw, undercooked, or unpasteurized foods may increase your risk of foodborne illness. <br>
-  Menu items may contain nuts and other allergens.
-  Please let us know if you are allergic to anything.
-</p>
-<p class ="notes">
-  ** 100% of this charge is paid to employees. 55% of this charge is paid to employees “directly serving the customer”.
-</p>
-<h5>Thank you for dining at the Walrus and the Carpenter.</h5>
+
+
 
 <% if @section %>
   <ul>
@@ -79,27 +75,9 @@
 </form>
 =======
 
-      <form action="/sections" method="POST">
-        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-        <div>
-          <h4>
-            <label for="name-input">Create A Menu Section</label>
-          </h4>
-          <input type="text" id = "name-input" name="section_name" />
-        </div>
-        <div>
-          <h4>
-            <label for="description-input">Section Description(optional)</label>
-          </h4>
-          <input type="text" id = "description-input" name="section_description" />
-        </div>
-        <div>
-          <input type="submit" />
-        </div>
-      </form>
 
 </div>
->>>>>>> 34bef0ca5a1c5e5bb912655a050f26e64b7dd008
+
 
 <!-- <form action="/sections" method="DELETE">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
