--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <div class= "header">
         <%= image_tag ("logo"), class: "logo" %>
         <div class= "links">
-          <%= link_to 'Menu', "/index"%>
+          <%= link_to 'Menu', sections_path%> 
           <%= link_to 'Photos', "/photos"%>
           <%= link_to 'About', "/about"%>
           <%= link_to 'Contact', "/contact"%>
