--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
       <div class= "header">
         <%= image_tag ("logo"), class: "logo" %>
         <div class= "links">
-          <%= link_to 'Menu', sections_path%> 
-          <%= link_to 'Photos', "/photos"%>
+          <%= link_to 'Menu', sections_path%>
+          <%= link_to 'Photos', "http://www.thewalrusbar.com/photos"%>
           <%= link_to 'About', "/about"%>
-          <%= link_to 'Contact', "/contact"%>
+          <%= link_to 'Contact', "http://www.thewalrusbar.com/contact"%>
         </div>
         <p>Open daily, 4pm - 10pm // Oyster Happy Hour, Monday - Thursday, 4pm - 6pm // 4743 Ballard Ave NW Seattle, WA 98107 // (206) 395-9227</p>
       </div>
