--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -6,7 +6,7 @@
     <ul>
       <% @items.each do |item| %>
         <li>
-          <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span>, <span class = "price">(<%=item.price%>)</span> <%=item.note%>
+          <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span> <span class = "price">(<%=item.price%>)</span> <%=item.note%>
         </li>
       <% end %>
     </ul>
