--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -14,7 +14,7 @@
           <% @items.each do |item| %>
             <% if item.menu_section_id == section.id %>
               <li>
-                <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span>, <span class = "price">(<%=item.price%>)</span> <%=item.note%>
+                <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span> <span class = "price">(<%=item.price%>)</span> <%=item.note%>
               </li>
             <% end %>
           <% end %>
