--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -17,26 +17,11 @@
             <% end %>
           <% end %>
         </ul>
+        <%= button_to 'Delete Section', @section, :method => :delete %>
         <% end %>
       </ul>
 
 </div>
-
-<div class = "form">
-
-
-      <% if @section %>
-        <ul>
-          <% @section.errors.each do |column, error| %>
-            <li><%= column %> <%= error %></li>
-          <% end %>
-        </ul>
-      <% end %>
-<<<<<<< HEAD
-    <% end %>
-  </ul>
-  <% end %>
-</ul>
 
 <h4>20% Service Charge**</h4>
 <p class="notes">
@@ -57,57 +42,24 @@
   </ul>
 <% end %>
 
-<form action="/sections" method="POST">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-  <div>
-    <h4>
-      <label for="name-input">Create A Menu Section</label>
-    </h4>
-    <input type="text" id = "name-input" name="section_name" />
-  </div>
-  <div>
-    <h4>
-      <label for="description-input">Section Description(optional)</label>
-    </h4>
-    <input type="text" id = "description-input" name="section_description" />
-  </div>
-  <div>
-    <input type="submit" />
-  </div>
-</form>
-=======
+<div class = "form">
 
-      <form action="/sections" method="POST">
-        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-        <div>
-          <h4>
-            <label for="name-input">Create A Menu Section</label>
-          </h4>
-          <input type="text" id = "name-input" name="section_name" />
-        </div>
-        <div>
-          <h4>
-            <label for="description-input">Section Description(optional)</label>
-          </h4>
-          <input type="text" id = "description-input" name="section_description" />
-        </div>
-        <div>
-          <input type="submit" />
-        </div>
-      </form>
-
+  <form action="/sections" method="POST">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+    <div>
+      <h4>
+        <label for="name-input">Create A Menu Section</label>
+      </h4>
+      <input type="text" id = "name-input" name="section_name" />
+    </div>
+    <div>
+      <h4>
+        <label for="description-input">Section Description(optional)</label>
+      </h4>
+      <input type="text" id = "description-input" name="section_description" />
+    </div>
+    <div>
+      <input type="submit" />
+    </div>
+  </form>
 </div>
->>>>>>> 34bef0ca5a1c5e5bb912655a050f26e64b7dd008
-
-<!-- <form action="/sections" method="DELETE">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-  <div>
-    <h4>
-      <label for="name-input">Delete A Menu Section</label>
-    </h4>
-    <input type="text" id = "name-input" name="section_name" />
-  </div>
-  <div>
-    <input type="submit" />
-  </div>
-</form> -->
