--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class= "container">
-    <%= image_tag ("anchor"), class: "anchor" %>
+    <%= image_tag ("anchor.jpg"), class: "anchor" %>
       <div class= "header">
-        <%= image_tag ("logo"), class: "logo" %>
+        <%= image_tag ("logo.jpg"), class: "logo" %>
         <div class= "links">
           <%= link_to 'Menu', sections_path%>
           <%= link_to 'Photos', "http://www.thewalrusbar.com/photos"%>
@@ -25,7 +25,7 @@
 <%= yield %>
 
     <div class= "footer">
-      <%= image_tag ("walrus"), class: "walrus" %>
+      <%= image_tag ("walrus.jpg"), class: "walrus" %>
     </div>
 
 </body>
