Added edit function to sections page

--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -10,7 +10,7 @@
 
 <div class = "form">
 
-  <form action="/sections/edit" method="POST">
+  <form action="/sections/edit/<%=@section.id %>" method="POST">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
     <div>
       <h4>
