Added edit form to menu item page

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -68,6 +68,28 @@
     </form>
   </div>
 
+  <div class = "box">
+
+    <form action="/sections/edit/<%=@section.id %>" method="POST">
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+      <div>
+        <h4>
+          <label for="name-input">Edit Menu Section</label>
+        </h4>
+        <input type="text" id = "name-input" name="section_name" value="<%= @section.name %>" />
+      </div>
+      <div>
+        <h4>
+          <label for="description-input">Edit Section Description(optional)</label>
+        </h4>
+        <input type="text" id = "description-input" name="section_description" value="<%= @section.description %>" />
+      </div>
+      <div>
+        <input type="submit" />
+      </div>
+    </form>
+  </div>
+
   <div class = "home">
     <%= link_to "Home", sections_path %>
   </div>
