Added delete function to sections page

--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -20,7 +20,7 @@
           <% end %>
         </ul>
         <%= link_to "Edit Section", edit_path(section) %>
-        <!-- <%= button_to 'Delete Section', @section, :method => :delete %> -->
+        <%= link_to 'Delete Section', delete_path(section) %>
         <% end %>
       </ul>
     </div>
