--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -112,6 +112,22 @@
 
 }
 
+.popup {
+  display: inline-block;
+  height: auto;
+  width: auto;
+  border: 2px dashed black;
+  text-align: center;
+  float: right;
+  padding: 50px;
+  margin: 10px 400px 0 0;
+}
+
+.errors {
+  color: red;
+  border: 1px solid black;
+}
+
 .footer {
   text-align: center;
 }
