--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,10 +1,11 @@
 <h1>Edit <%= @section.name %></h1>
 
 <% if @section %>
-  <ul>
+  <ul class = "popup">
     <% @section.errors.each do |column, error| %>
       <li><%= column %> <%= error %></li>
     <% end %>
+    <p class = "errors">X close error messages</p>
   </ul>
 <% end %>
 
