--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -26,10 +26,12 @@
 
 
     <% if @item %>
-      <ul>
+      <ul class= "popup">
+        <h3>ERROR!</h3>
         <% @item.errors.each do |column, error| %>
           <li><%= column %> <%= error %></li>
         <% end %>
+        <p class = "errors">X close error messages</p>
       </ul>
     <% end %>
 
