--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -43,6 +43,11 @@
   font-family: 'Cantarell', sans-serif;
 }
 
+.toggle {
+  text-align: center;
+  text-decoration: underline;
+}
+
 .menubody  {
   height: auto;
   width: 800px;
