--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -4,21 +4,27 @@
 
     <h1>Menu for <%=Time.now.strftime("%A, %b %d")%></h1>
     <div class = "center">
+
+      <h3 class = "toggle">**click to hide individual menu items**</h3>
       <ul>
         <% @sections.each do |section| %>
         <li>
           <h2><%= link_to section.name, section %></h2>
         </li>
           <%=section.description %>
-        <ul>
-          <% @items.each do |item| %>
-            <% if item.menu_section_id == section.id %>
-              <li>
-                <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span> <span class = "price">(<%=item.price%>)</span> <%=item.note%>
-              </li>
+
+
+          <div class = "hide">
+           <ul>
+            <% @items.each do |item| %>
+              <% if item.menu_section_id == section.id %>
+                <li>
+                  <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span> <span class = "price">(<%=item.price%>)</span> <%=item.note%>
+                </li>
+              <% end %>
             <% end %>
-          <% end %>
-        </ul>
+           </ul>
+          </div>
         <%= link_to "Edit Section", edit_path(section) %>
         <!-- <%= button_to 'Delete Section', @section, :method => :delete %> -->
         <% end %>
@@ -44,7 +50,7 @@
       <h3>ERROR!</h3>
         <li><%= column %> <%= error %></li>
       <% end %>
-      <p class = "errors">X close error messages</p>
+      <p class = "errors">X close error messages X</p>
     </ul>
   <% end %>
 
