--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -31,7 +31,7 @@
         <% @item.errors.each do |column, error| %>
           <li><%= column %> <%= error %></li>
         <% end %>
-        <p class = "errors">X close error messages</p>
+        <p class = "errors">X close error messages X</p>
       </ul>
     <% end %>
 
