--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -8,6 +8,8 @@
         <li>
           <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span> <span class = "price">(<%=item.price%>)</span> <%=item.note%>
         </li>
+        <%= link_to "Edit Item", edit_item_path(item) %>
+        <%= link_to "Delete Item", delete_item_path(item) %>
       <% end %>
     </ul>
 
@@ -61,28 +63,6 @@
           <label for="description-input">Note</label>
         </h4>
         <input type="text" id = "description-input" name="item_note" />
-      </div>
-      <div>
-        <input type="submit" />
-      </div>
-    </form>
-  </div>
-
-  <div class = "box">
-
-    <form action="/sections/edit/<%=@section.id %>" method="POST">
-      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-      <div>
-        <h4>
-          <label for="name-input">Edit Menu Section</label>
-        </h4>
-        <input type="text" id = "name-input" name="section_name" value="<%= @section.name %>" />
-      </div>
-      <div>
-        <h4>
-          <label for="description-input">Edit Section Description(optional)</label>
-        </h4>
-        <input type="text" id = "description-input" name="section_description" value="<%= @section.description %>" />
       </div>
       <div>
         <input type="submit" />
