--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -6,6 +6,8 @@
     <div class = "center">
 
       <h3 class = "toggle">**click to hide individual menu items**</h3>
+      <h3 class = "toggle", style ="display: none">**click to show individual menu items**</h3>
+
       <ul>
         <% @sections.each do |section| %>
         <li>
