Added delete confirmation function to section and menu item pages

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -9,7 +9,7 @@
           <span class= "item"><%=item.name%></span>, <span class = "description"><%=item.description%></span> <span class = "price">(<%=item.price%>)</span> <%=item.note%>
         </li>
         <%= link_to "Edit Item", edit_item_path(item) %>
-        <%= link_to "Delete Item", delete_item_path(item) %>
+        <%= link_to "Delete Section", delete_item_path(item), method: :get, data: { confirm: "Delete entire menu item?" } %>
       <% end %>
     </ul>
 
