--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -26,7 +26,7 @@
            </ul>
           </div>
         <%= link_to "Edit Section", edit_path(section) %>
-        <%= link_to 'Delete Section', delete_path(section) %>
+        <%= link_to "Delete Section", delete_path(section), method: :get, data: { confirm: "Delete entire menu section?" } %>
         <% end %>
       </ul>
     </div>
