--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -20,7 +20,7 @@
 .header .logo {
   display: inline-block;
   float: left;
-  padding: 0 0 0 320px;
+  padding: 0 33% 0 33%;
 }
 
 .header .links {
@@ -41,18 +41,25 @@
 .header p{
   display: inline-block;
   font-family: 'Cantarell', sans-serif;
+  font-size: 93%;
+  text-align: center;
 }
 
 .toggle {
   text-align: center;
+  text-decoration: none;
+  color: #95b9e3;
+}
+
+.toggle a:hover {
   text-decoration: underline;
 }
 
 .menubody  {
   height: auto;
-  width: 800px;
+  width: 67%;
   border: 2px solid #95b9e3;
-  margin: 0 300px 0 250px;
+  margin: 2% 0 0 16%;
 }
 
 .menubody h1 {
@@ -61,11 +68,13 @@
 
 .menubody h2 {
   text-align: center;
+  margin-top: 2%;
 }
 
 .menubody ul{
   list-style: none;
   text-align: center;
+  padding: 0 3% 0 3%;
 }
 
 .menubody li{
@@ -86,7 +95,6 @@
 
 .menubody .center {
   text-align: center;
-  padding: 0 50px 0 0;
 }
 
 .menubody .notes {
@@ -97,12 +105,27 @@
   text-align: center;
 }
 
+.buttons {
+  padding: 2%;
+}
+
+.buttons li {
+  display: inline-block;
+  padding: 0 2% 0 2%;
+  color: black;
+}
+
 .box {
   display: inline-block;
-  width: auto;
+  width: 255px;
   text-align: center;
-  margin: 5px 0 0 550px;
+  margin: 2% 40% 0 40%;
   border: 2px dashed #95b9e3;
+}
+
+.form .submit {
+  padding-top: 8%;
+  padding-bottom: 8%;
 }
 
 .home {
@@ -114,7 +137,11 @@
   text-decoration: none;
   font-size: 20px;
   color: #95b9e3;
+}
 
+.form h4 {
+  padding: 0 3% 0 3%;
+  position: relative;
 }
 
 .popup {
@@ -135,4 +162,9 @@
 
 .footer {
   text-align: center;
+  padding-top: 3%;
+}
+
+.footer img {
+  width: 100%;
 }
