--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -32,7 +32,14 @@
               <%= link_to "Edit Section", edit_path(section) %>
             </li>
             <li>
-              <%= link_to "Delete Section", delete_path(section), method: :get, data: { confirm: "Delete entire menu section?" } %>
+              <form action="sections/<%=section.id %>" method="POST">
+                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+                <input type="hidden" name="_method" value="DELETE" />
+                <input type="submit" value="Delete Section" />
+              </form>
+
+
+              <!-- <%= link_to "Delete Section", delete_path(section), method: :get, data: { confirm: "Delete entire menu section?" } %> -->
             </li>
           </div>
         <% end %>
