changed links for edit and delete using forms

--- a/app/views/menu_item/edit.html.erb
+++ b/app/views/menu_item/edit.html.erb
@@ -37,7 +37,7 @@
       <input type="text" id = "note-input" name="item_note" value="<%= @item.note %>" />
     </div>
     <div>
-      <input type="submit" />
+      <input type="submit" value="Update"/>
     </div>
   </form>
 </div>
