--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -25,7 +25,7 @@
       <input type="text" id = "description-input" name="section_description" value="<%= @section.description %>" />
     </div>
     <div>
-      <input type="submit" />
+      <input type="submit" value="Update" />
     </div>
   </form>
 </div>
