Added underline feature when hovering over show/hide items link and made cursor into pointer when hovering

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -47,12 +47,8 @@
 
 .toggle {
   text-align: center;
-  text-decoration: none;
+  cursor: pointer;
   color: #95b9e3;
-}
-
-.toggle a:hover {
-  text-decoration: underline;
 }
 
 .menubody  {
