--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,17 +1,17 @@
-<%require 'time'%>
+<% require 'time' %>
 
 <div class = "menubody">
 
     <h1>Menu for <%=Time.now.strftime("%A, %b %d")%></h1>
     <div class = "center">
 
-      <li><h3 class = "toggle">~ CLICK TO HIDE MENU ITEMS ~</h3></li>
-      <li><h3 class = "toggle", style ="display: none">~ CLICK TO SHOW MENU ITEMS ~</h3></li>
+      <h3 class = "toggle">~ CLICK TO HIDE MENU ITEMS ~</h3>
+      <h3 class = "toggle", style ="display: none">~ CLICK TO SHOW MENU ITEMS ~</h3>
 
       <ul>
         <% @sections.each do |section| %>
         <li>
-          <h2><%= link_to section.name, section %></h2>
+          <a><h2 class="blue_hover"><%= link_to section.name, section %></h2></a>
         </li>
           <%=section.description %>
 
