--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "CupolaRoman";
+  src: url(CupolaRoman.ttf);
+}
 
 .container {
   display: inline-block;
@@ -25,22 +29,19 @@
 
 .header .links {
   display: inline-block;
-  font-family: 'Arimo', sans-serif;
   float: right;
   padding: 50px 0 0 25px;
 }
 
 .header a {
-  font-family: 'Cantarell', sans-serif;
   padding: 10px;
   font-size: 20px;
   text-decoration: none;
   color: black;
 }
 
-.header p{
+.header p {
   display: inline-block;
-  font-family: 'Cantarell', sans-serif;
   font-size: 93%;
   text-align: center;
 }
@@ -56,15 +57,21 @@
   width: 67%;
   border: 2px solid #83bccd;
   margin: 2% 0 0 16%;
+  text-align: center;
 }
 
 .menubody h1 {
+  font-family: "CupolaRoman";
   text-align: center;
 }
 
-h2 {
-  text-align: center;
-  margin-top: 2%;
+// h2 {
+//   text-align: center;
+//   margin-top: 2%;
+// }
+
+.center a {
+  font-family: "CupolaRoman";
 }
 
 .center a:link {
