--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
             <%= link_to 'Photos', "http://www.thewalrusbar.com/photos"%>
           </a>
           <a>
-            <%= link_to 'About', "/about"%>
+            <%= link_to 'About', "http://www.thewalrusbar.com/about"%>
           </a>
           <a>
             <%= link_to 'Contact', "http://www.thewalrusbar.com/contact"%>
