Changed font on menu item page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -60,15 +60,14 @@
   text-align: center;
 }
 
+.menubody a {
+  font-family: "CupolaRoman";
+}
+
 .menubody h1 {
   font-family: "CupolaRoman";
   text-align: center;
 }
-
-// h2 {
-//   text-align: center;
-//   margin-top: 2%;
-// }
 
 .center a {
   font-family: "CupolaRoman";
@@ -186,4 +185,8 @@
 
 .footer img {
   width: 100%;
+}
+
+.home a {
+  font-family: "CupolaRoman";
 }
