--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -26,12 +26,12 @@
         </h4>
         <input type="text" id = "description-input" name="section_description" value="<%= @section.description %>" />
       </div>
-      <div>
+      <div class="submit_edit">
         <input type="submit" value="Update" />
       </div>
     </form>
   </div>
-</div>  
+</div>
 
 <div class = "home">
   <%= link_to "Home", sections_path %>
