--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -80,7 +80,7 @@
         </h4>
         <input type="text" id = "description-input" name="item_note" />
       </div>
-      <div>
+      <div class="submit">
         <input type="submit" />
       </div>
     </form>
