--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -18,7 +18,6 @@
   display: inline-block;
   width: 80%;
   padding: 0 0 0 0;
-
 }
 
 .header .logo {
@@ -37,12 +36,12 @@
   padding: 10px;
   font-size: 20px;
   text-decoration: none;
-  color: black;
+  color: #020202;
 }
 
 .header p {
   display: inline-block;
-  font-size: 93%;
+  font-size: 100%;
   text-align: center;
 }
 
@@ -69,16 +68,21 @@
   text-align: center;
 }
 
+.center h3 {
+  padding: 2%;
+}
+
 .center a {
   font-family: "CupolaRoman";
+  text-decoration: none;
 }
 
 .center a:link {
-  color: #000;
+  color: #020202;
 }
 
 .center a:visited {
-  color: #000;
+  color: #020202;
 }
 
 .center a:hover {
@@ -97,6 +101,8 @@
 
 .menubody li{
   list-style: none;
+  font-family: "Courier New";
+  font-size: 88%;
 }
 
 .menubody .item {
@@ -123,6 +129,11 @@
   text-align: center;
 }
 
+.hide li {
+  font-family: "Courier New";
+  font-size: 88%;
+}
+
 .buttons {
   padding: 2%;
 }
@@ -130,7 +141,7 @@
 .buttons li {
   display: inline-block;
   padding: 0 2% 0 2%;
-  color: black;
+  color: #020202;
 }
 
 .box {
@@ -141,17 +152,28 @@
   border: 2px dashed #83bccd;
 }
 
+.box .submit {
+  padding-top: 8%;
+  padding-bottom: 8%;
+}
+
 .form .submit {
   padding-top: 8%;
   padding-bottom: 8%;
 }
 
+.form .submit_edit {
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
 .home {
-  display: inline-block;
-  padding: 0 0 0 15px;
+  text-align: center;
+  padding-top: 4%;
 }
 
 .home a {
+  font-family: "CupolaRoman";
   text-decoration: none;
   font-size: 20px;
   color: #83bccd;
@@ -175,7 +197,7 @@
 
 .errors {
   color: red;
-  border: 1px solid black;
+  border: 1px solid #020202;
 }
 
 .footer {
@@ -185,8 +207,4 @@
 
 .footer img {
   width: 100%;
-}
-
-.home a {
-  font-family: "CupolaRoman";
 }
